err/ancypatch.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ancypatch'...
Listing './lib/python3.5/site-packages/ancypatch/core'...
Compiling './lib/python3.5/site-packages/ancypatch/core/binary.py'...
***   File "./lib/python3.5/site-packages/ancypatch/core/binary.py", line 171
    os.chmod(path, 0755)
                      ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/ancypatch/core/compiler.py'...
***   File "./lib/python3.5/site-packages/ancypatch/core/compiler.py", line 44
    print 'unknown section', section
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ancypatch/core/context.py'...
***   File "./lib/python3.5/site-packages/ancypatch/core/context.py", line 96
    print indent + '[FUNC] @0x%x-0x%x' % (func.addr, func.addr + func.size)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ancypatch/core/linker.py'...
***   File "./lib/python3.5/site-packages/ancypatch/core/linker.py", line 110
    print 'Warning: duplicate symbol (%s)' % sym
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ancypatch/scripts'...
Compiling './lib/python3.5/site-packages/ancypatch/scripts/bindiff.py'...
***   File "./lib/python3.5/site-packages/ancypatch/scripts/bindiff.py", line 43
    print 'Usage: %s [--backtrack] <orig> <new>' % sys.argv[0]
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ancypatch/scripts/explore.py'...
***   File "./lib/python3.5/site-packages/ancypatch/scripts/explore.py", line 18
    print 'Usage: %s [--backtrack] <binary>' % sys.argv[0]
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ancypatch/util'...
Listing './lib/python3.5/site-packages/ancypatch/util/crypto'...
Compiling './lib/python3.5/site-packages/ancypatch/util/emu.py'...
***   File "./lib/python3.5/site-packages/ancypatch/util/emu.py", line 133
    print '  [BACKTRACK] Running once:'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ancypatch/util/heap'...
Listing './lib/python3.5/site-packages/ancypatch/util/patch'...
Listing './lib/python3.5/site-packages/ancypatch/util/stdlib'...
Listing './lib/python3.5/site-packages/ancypatch-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/capstone'...
Listing './lib/python3.5/site-packages/capstone-3.0.4.egg-info'...
Listing './lib/python3.5/site-packages/keystone'...
Listing './lib/python3.5/site-packages/keystone_engine-0.9.1.post3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unicorn'...
Listing './lib/python3.5/site-packages/unicorn/include'...
Listing './lib/python3.5/site-packages/unicorn/include/unicorn'...
Listing './lib/python3.5/site-packages/unicorn/lib'...
Listing './lib/python3.5/site-packages/unicorn-1.0.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
